<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aditya.melophile.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/username"
            android:textColorHint="#212121"
            android:background="@drawable/button_bg"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25sp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="#212121"
            android:id="@+id/password"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_bg"
            android:layout_marginStart="25sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_forgot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:text="@string/forgot_your_password"
            android:visibility="visible" />


        <Button
            android:id="@+id/signin"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/signin_button_bg"
            android:text="@string/sign_in"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/social_signIN"
            android:layout_marginTop="5dp"
            android:text="@string/or_sign_in_with_a_social_account"
            android:textColor="#000000"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/social_signIN"
            android:orientation="horizontal"
            android:id="@+id/Social_layout"
            android:gravity="center">

            <Button
                android:id="@+id/btn_gSignIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/common_google_signin_btn_icon_light"
                android:padding="10dp"
                android:textColorLink="@color/common_google_signin_btn_tint" />


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/Social_layout"
            android:gravity="center"
            android:background="@color/colorAccent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signup"
                android:textSize="14sp"

                android:background="@drawable/signup_bg"
                android:textColor="@color/colorPrimary"
                android:text="@string/don_t_have_an_account_create_one"/>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>